--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.10.0
   flutter_dotenv: ^5.2.1
   smooth_page_indicator: ^1.2.0+3
+  firebase_auth: ^5.4.0
 
 dev_dependencies:
   flutter_test:
