--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   smooth_page_indicator: ^1.2.0+3
   firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
