--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
