--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
   fl_chart: ^0.67.0
+  shared_preferences: ^2.4.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
