--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fl_chart: ^0.67.0
   shared_preferences: ^2.4.0
   intl: ^0.20.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
